--- a/style.css
+++ b/style.css
@@ -1,8 +1,19 @@
 html, body {
   margin: 0;
   padding: 0;
+  background-color: rgb(64, 64, 64);
 }
 
 canvas {
+  padding: 0;
+  margin: auto;
   display: block;
+  position: absolute;
+  border-color: rgb(53, 53, 53);
+  border-style: solid;
+border-width:  1px;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
 }
