--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
-html, body {
+html,
+body {
   margin: 0;
   padding: 0;
   background-color: rgb(64, 64, 64);
@@ -11,7 +12,7 @@ canvas {
   position: absolute;
   border-color: rgb(53, 53, 53);
   border-style: solid;
-border-width:  1px;
+  border-width: 1px;
   top: 0;
   bottom: 0;
   left: 0;
